--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apple-news",
+  "name": "@brute-force/apple-news",
   "version": "2.1.0",
   "description": "Node.js client for Apple News API",
   "main": "index.js",
